# maturin-submodule-stub

./: README.md  run_test.sh
python/: .gitignore  requirements.txt  run_test.sh  test_stub.py
rust/: Cargo.toml  pyproject.toml  run_test.sh
rust/src/: python.rs
rust/test_module/: __init__.py
rust/test_module/test_module/: sub_module.pyi
