[package]
name = "test-module"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "test_module"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }